fix: improve progress and volume bar contrast

--- a/src/main.scss
+++ b/src/main.scss
@@ -153,7 +153,7 @@ body {
 }
 
 .overlay-progress-track {
-  background-color: var(--text-subtle-color);
+  background-color: var(--border-color);
 }
 
 .overlay-progress-bar {
